# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-11-26 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_shell setting env for login su shell

2019-11-25 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_environment:transform and add environment.py
      integration test checks based on the current parsing
    * Add login argument to cloudi_service_shell

2019-11-23 Michael Truog   <mjtruog at protonmail dot com>

    * Change cloudi_environment:transform to allow unicode env names
    * Add unicode error handling during external service start
    * Change cloudi_os_spawn executable name to lack _vsn_1 suffix

2019-11-17 Michael Truog   <mjtruog at protonmail dot com>

    * Enable logging of unicode data used in error messages,
      function names, filenames, service name patterns, etc.

2019-11-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add support for unicode to cloudi_service_shell
    * Add elapsed time to cloudi_service_cron log output
    * Fix handling of external service unicode strings for
      file_path, args and env string data (encoded as utf-8)

2019-11-14 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_cron accuracy after time_offset
      causes timer adjustments
    * Ensure cloudi_service_cron time_offsets do not cause the
      cron expression sequence to occur more than the
      cron expression specifies

2019-11-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_cron time_offset timer adjustments
      for when the system clock changes

2019-11-09 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify cloudi_cron module and add documentation

2019-11-05 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify cloudi_cron module

2019-11-04 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_cron date increment
