@@ -41,10 +41,6 @@ __all__ = [
     'InvalidInputException',
     'MessageDecodingException',
     'TerminateException',
-    # XXX backwards-compatibility
-    'invalid_input_exception',
-    'message_decoding_exception',
-    'terminate_exception',
 ]
 
 if sys.version_info[0] >= 3:
@@ -378,8 +374,6 @@ class InvalidInputException(Exception):
         if message is None:
             message = 'Invalid Input'
         Exception.__init__(self, message)
-# XXX backwards-compatibility
-invalid_input_exception = InvalidInputException # pylint: disable=invalid-name
 
 class ReturnSyncException(Exception):
     """
@@ -415,8 +409,6 @@ class MessageDecodingException(Exception):
     """
     def __init__(self, message):
         Exception.__init__(self, message)
-# XXX backwards-compatibility
-message_decoding_exception = MessageDecodingException # pylint: disable=invalid-name
 
 class TerminateException(Exception):
     """
@@ -431,8 +423,6 @@ class TerminateException(Exception):
         return the termination timeout
         """
         return self.__timeout
-# XXX backwards-compatibility
-terminate_exception = TerminateException # pylint: disable=invalid-name
 
 # force unbuffered stdout/stderr handling without external configuration
 if sys.stderr.__class__.__name__ != '_unbuffered':
